# rainbow-rust

./: .env  Cargo.toml
migrations/: 20231105132743_init.down.sql  20231105132743_init.up.sql  20231109193132_create_product.down.sql  20231109193132_create_product.up.sql  20231110191230_create_subproduct.down.sql  20231110191230_create_subproduct.up.sql  20231119055247_create_agent.down.sql  20231119055247_create_agent.up.sql  20231119061039_agent_product_junction.down.sql  20231119061039_agent_product_junction.up.sql
src/: main.rs
src/config/: config.rs
src/controller/: mod.rs  productcontroller.rs  usercontroller.rs
src/middleware/: jwt.rs  validator.rs
src/models/: agentdetails.rs  mod.rs  product.rs  user.rs  userresponse.rs
src/router/: auth.rs  mod.rs  productroute.rs
