[package]
name = "rainbow-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
bcrypt = "0.15.0"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.1.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.2", features = [
    "runtime-async-std-native-tls",
    "postgres",
    "chrono",
    "uuid",
] }
thiserror = "1.0.50"
time = "0.3.30"
tokio = { version = "1.33.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }
validator = { version = "0.16", features = ["derive"] }
